# monopoly-deal-ai

./: .envrc.example  .gitignore  CITATION.cff  LICENSE  README.md  USAGE.md  docker-compose.yml  justfile  pyproject.toml  pyrightconfig.json
.github/workflows/: deploy.yml
app/: api_models.py  database.py  db_models.py  dependencies.py  main.py  models.py  models.yaml  routes.py  settings.py
app/game/: cache.py  service.py
db/: schema.sql  seed_data.py  utils.py
db/migrations/: 20250910105900_add-configs-and-games.sql  20250911014003_add-actions-table.sql  20250912112002_add-selected-actions-table.sql  20250928131011_set-permissions.sql  20251031201446_update-game-table-player-specs.sql  20251031211813_add_model_name_to_games.sql
docker/: backend.Dockerfile  backend.dockerignore  cfr.Dockerfile  cfr.dockerignore  frontend.Dockerfile  frontend.dockerignore
frontend/: package-lock.json  package.json  vitest.config.ts
game/: __init__.py  action.py  cards.py  config.py  constants.py  deck.py  game.py  pile.py  player.py  state.py  util.py
models/: __init__.py  checkpoint.py  constants.py  selector.py  types.py  util.py
models/cfr/: __init__.py  cfr.py  checkpoint.py  constants.py  (+7 more)
scripts/: deploy.sh  setup-gcp.sh  setup-health-ping.sh  setup-service-account.sh
terraform/: destroy-cluster.sh  main.tf  setup-cluster.sh  terraform-apply.sh  variables.tf
tests/: conftest.py  test_actions.py  test_api_models.py  test_cache.py  test_checkpoint.py  test_config.py  test_deck.py  test_game.py  test_io.py  test_parallelism.py  test_routes.py  test_service.py
(+54 files in other folders)
